# affairs

./: .gitignore  README.md
garden/: Makefile  db.py  grpc_service.py  main.py  pyproject.toml
human/: Makefile  dependencies.py  main.py  pyproject.toml  routes.py  schemas.py
protos/: Makefile  build-pkgs.sh  build-protos.sh  format.py  pyproject.toml
protos/garden/: garden.proto  types.proto
protos/pkgs/garden/garden_api/: garden_pb2.py  garden_pb2_grpc.py  types_pb2.py
