[tool.poetry]
name = "garden_api"
version = "0.0.1"
description = "gRPC API for garden service"
authors = ["Schudov <schudov@ussc.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "^62.1.0"
grpcio-tools = "^1.45.0"

[tool.poetry.dev-dependencies]
wheel = "^0.37.1"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=43.0.0", "wheel"]
build-backend = "poetry.core.masonry.api"
